[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/InputManager.gd" type="Script" id=2]
[ext_resource path="res://assets/user_interface/clickable_screen/clickable_screen.gd" type="Script" id=3]

[node name="clickable_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="input_detection" type="Node" parent="." instance=ExtResource( 1 )]
script = ExtResource( 2 )

[connection signal="gui_input" from="." to="." method="_on_clickable_screen_gui_input"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
